# CUDA_Programming

./: .gitignore
GPU_Array_Matching/: CMakeLists.txt  Makefile  README.md  analysis.R  array_match.cu  array_match.h  change_arr_size.csv  change_num_arrays.csv  gpu_match  main.cu  makefile  performance.sh  rand_init.cu  rand_init.h  results.csv  shm_array_match.cu  shm_array_match.h  system_includes.h
GPU_Array_Matching/analysis/data/: change_arr_size_small.csv  change_num_arr_lg.csv
GPU_Array_Matching/data/: change_arr_size_avg.csv  change_arr_size_lg.csv  change_arr_size_small.csv  change_num_arr_avg.csv  change_num_arr_lg.csv  change_num_arr_small.csv
GPU_Array_Matching/include/: cuda_includes.h  shfl_match.h  shm_array_match.h
GPU_Array_Matching/src/: array_match.cu  main.cu  shfl_match.cu
GPU_Array_Matching/test/test_data/: test_1024_1024.csv  test_128_128.csv  test_512_512.csv  test_64_64.csv  test_8_8.csv
GPU_Array_Matching_v2/: CMakeLists.txt  README.md  gpu_match  hardware_stats_shfl_bs.csv  hardware_stats_shfl_hash.csv  hardware_stats_shfl_nested.csv  hardware_stats_shfl_unroll.csv  hardware_stats_shfl_unroll2.csv  hardware_stats_shm_nested.csv  size12_compile.out  size24_compile.out  start_stop_shfl_bs.csv  start_stop_shfl_hash.csv  start_stop_shfl_nested.csv  start_stop_shfl_unroll.csv  start_stop_shfl_unroll2.csv  start_stop_shm_nested.csv
GPU_Array_Matching_v2/analysis/: analysis.R  performance.sh
GPU_Array_Matching_v2/analysis/Fall21/: size16_compile.out  size4_compile.out
GPU_Array_Matching_v2/analysis/data/: change_arr_size_lg.csv  change_num_arr_avg.csv  change_t_a12.csv  change_t_a16.csv  change_t_a23.csv  change_t_a24.csv  change_t_a4.csv  change_t_a8.csv  hardwareStats.csv  hardware_stats_shfl_bs.csv  hardware_stats_shfl_hash.csv  hardware_stats_shfl_nested.csv  hardware_stats_shfl_unroll.csv  hardware_stats_shfl_unroll2.csv  hardware_stats_shfl_unroll_2.csv  hardware_stats_shm_nested.csv
GPU_Array_Matching_v2/analysis/data/fall2021-end/: change_t_arr12.csv  change_t_arr16.csv  change_t_arr24.csv  change_t_arr4.csv  change_t_arr8.csv
GPU_Array_Matching_v2/analysis/data/fall2021-end-final/: size12.csv  size16.csv  size24.csv  size4.csv  size8.csv
GPU_Array_Matching_v2/analysis/data/fall2021-end-nounroll/: size12.csv  size16.csv  size24.csv  size4.csv  size8.csv
GPU_Array_Matching_v2/analysis/data/fall2021-mid/: change_t_arr12.csv  change_t_arr16.csv  change_t_arr24.csv  change_t_arr4.csv  change_t_arr8.csv
GPU_Array_Matching_v2/analysis/data/hash/: lg_hash_array_size12.csv  lg_hash_array_size16.csv  lg_hash_array_size8.csv  sm_hash_array_size16.csv  sm_hash_array_size4.csv  sm_hash_array_size8.csv
GPU_Array_Matching_v2/analysis/data/original_hash/: lg_hash_array_size24.csv  lg_hash_array_size4.csv  sm_hash_array_size12.csv  sm_hash_array_size24.csv
GPU_Array_Matching_v2/analysis/data/shuffle_v_shared/: change_t_a4.csv
GPU_Array_Matching_v2/analysis/fall21/: size8_compile.out
GPU_Array_Matching_v2/include/: bs_match.h  common.h  cpu_array_match.h  cuda_includes.h  hash_match.h  match.h  nvmlClass.h  shfl_array_match.h  shfl_bs_match.h  shfl_hash_match.h  shfl_hash_w_shared_match.h  shfl_match.h  shfl_unroll2_match.h  shfl_unroll_match.h  shm_array_match.h  shm_hash_match.h  shm_unroll_match.h  shuffle.h  unroll2_match.h  unroll_match.h  warp_match.h
GPU_Array_Matching_v2/src/: array_match.cu  bs_match.cu  cpu_array_match.cpp  cufft-power.cu  hash_match.cu  main.cu  match.cu  shfl_array_match.cu  shfl_bs_match.cu  shfl_hash_match.cu  shfl_hash_w_shared_match.cu  shfl_match.cu  shfl_unroll2_match.cu  shfl_unroll_match.cu  shm_array_match.cu  shm_hash_match.cu  shm_unroll_match.cu  shuffle.cpp  unroll2_match.cu  unroll_match.cu  warp_match.cu
cpu_power_energy/: CMakeLists.txt  Makefile  papi_env.sh  papi_sample_compile.sh  test.txt
cpu_power_energy/include/: powercapPAPIClass.h
cpu_power_energy/src/: hello_papi.cpp
profiling/: a.out  main.cu  size_12  size_8
profiling/enumerate/: a.out  compile.sh  main.cu  size_4  size_8
profiling/new_keyword/: a.out  compile.sh  main.cu  size_12  size_23  size_4
profiling/robbie_1650Ti_mobile/: size_12
profiling/static_arrays/: a.out  main.cu  size_23  size_24  size_4
profiling/static_arrays/robbie_1650Ti_mobile/: size_4  size_8
profiling/unroll/: a.out  main.cu  size_16
sample_kernels/: cuda_includes.h  nvmlClass.h  profile.out  profiler-example-call
sample_kernels/analysis/: energyUsage.R  full-table.xlsx  max_power  median_clock_rates  power_analysis.R
sample_kernels/analysis/default_kernel_comparison/: coalescing_default.csv  default_kernel_comparison.R  matrixMul_default.csv  simpleCUFFT_default.csv  start_stop_coalescing_memory.csv  start_stop_matrixMul_compute.csv  start_stop_simpleCUFFT_hybrid.csv  start_stop_transpose_hybrid.csv  start_stop_vectorAdd_compute.csv  start_stop_wordcount_memory.csv  transpose_default.csv  vectorAdd_default.csv  wordcount_default.csv
sample_kernels/analysis/extended_kernel_analysis/: cuSolverDn_LinearSolver_hardware_stats.csv  extended_power_analysis.R  max_power  simpleCUFFT_hardware_stats.csv
sample_kernels/analysis/idle_analysis/: default_kernel_comparison.R  idle_comparison.R
sample_kernels/analysis/idle_analysis2/: get_maximums.R  idle-table.xlsx
sample_kernels/analysis/simple_kernel_analysis/: max_power  median_clock_rates  simple_power_analysis.R
sample_kernels/analysis/thread_block_analysis/: simpleCUFFT_ratio_b16_t256.csv  simpleCUFFT_ratio_b16_t512.csv  simpleCUFFT_ratio_b32_t1024.csv  simpleCUFFT_ratio_b32_t128.csv  thread_block_analysis.R  threadblock.R
sample_kernels/compute/cuSolverDn_LinearSolver/: Makefile  cuSolverDn_LinearSolver  cuSolverDn_LinearSolver.cpp  hardware_stats.csv  start_stop_linearSolverQR.csv
sample_kernels/compute/eigenvalues/: Makefile  eigenvalues
sample_kernels/compute/matrixMul/: Makefile  matrixMul  matrixMul.cu  matrixMul_default.csv  matrixMul_t1024_b200.csv  start_stop_matrixMul_compute.csv  start_stop_t1024_b200_matrixMul_compute.csv
sample_kernels/graph/sssp/: Makefile  (+1 more)
(+716 files in other folders)
